--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -15,4 +15,9 @@
     <welcome-file-list>
         <welcome-file>/index.xhtml</welcome-file>
     </welcome-file-list>
+    
+    <error-page>
+        <error-code>404</error-code>
+        <location>/page404.xhtml</location>
+    </error-page>
 </web-app>
