--- a/pom.xml
+++ b/pom.xml
@@ -40,5 +40,11 @@ http://maven.apache.org/xsd/maven-4.0.0.xsd">
             <version>2.7.7</version>
         </dependency>
 
+        <dependency>
+            <groupId>javax.transaction</groupId>
+            <artifactId>javax.transaction-api</artifactId>
+            <version>1.2</version>
+        </dependency>
+
     </dependencies>
 </project>
